# voltmeter-client

./: .gitlab-ci.yml  CMakeLists.txt  ChannelPanel.cpp  ChannelPanel.hpp  ClientSocket.cpp  ClientSocket.hpp  Connection.cpp  Connection.hpp  ConnectionPanel.cpp  ConnectionPanel.hpp  EmulatorConnection.cpp  EmulatorConnection.hpp  FrameShiftTrigger.cpp  FrameShiftTrigger.hpp  FrameTrigger.cpp  FrameTrigger.hpp  GaugePlot.cpp  GaugePlot.hpp  IODeviceConnection.cpp  IODeviceConnection.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  Measurement.hpp  NetworkConnection.cpp  NetworkConnection.hpp  README.md  SerialPortConnection.cpp  SerialPortConnection.hpp  ShiftFrameTrigger.cpp  ShiftFrameTrigger.hpp  ShowMode.hpp  SidePanel.cpp  SidePanel.hpp  TriggerOptions.hpp  TriggerOptionsDialog.cpp  TriggerOptionsDialog.hpp  main.cpp
